https://bugs.webkit.org/show_bug.cgi?id=39798 No selection change notification for editing operation that doesn't change the selection's DOM position

Reviewed by Ojan Vafai.

WebCore:

Some editing operations change the selection visually without affecting its position within
the DOM.  This was previously known to occur for certain typing commands, but it can also
occur for some Pastes and changes to block style.

* editing/Editor.cpp:
(WebCore::Editor::appliedEditing):
(WebCore::Editor::unappliedEditing):
(WebCore::Editor::reappliedEditing):
(WebCore::Editor::changeSelectionAfterCommand):
* editing/Editor.h:

LayoutTests:

block-style-001.html demonstrated the bug, so no new tests have been added.

* platform/mac/editing/execCommand/format-block-expected.txt:
* platform/mac/editing/execCommand/outdent-selection-expected.txt:
* platform/mac/editing/pasteboard/paste-text-005-expected.txt:
* platform/mac/editing/pasteboard/paste-text-006-expected.txt:
* platform/mac/editing/pasteboard/paste-text-007-expected.txt:
* platform/mac/editing/pasteboard/paste-text-014-expected.txt:
* platform/mac/editing/style/apple-style-editable-mix-expected.txt:
* platform/mac/editing/style/block-style-001-expected.txt:
* platform/mac/editing/style/block-style-002-expected.txt:
* platform/mac/editing/style/block-style-003-expected.txt:
* platform/mac/editing/style/create-block-for-style-005-expected.txt:
* platform/mac/editing/style/create-block-for-style-006-expected.txt:
* platform/mac/editing/style/create-block-for-style-008-expected.txt:
* platform/mac/editing/style/relative-font-size-change-002-expected.txt:
* platform/mac/editing/style/relative-font-size-change-003-expected.txt:
* platform/mac/editing/style/relative-font-size-change-004-expected.txt:
* platform/mac/editing/style/table-selection-expected.txt:



Canonical link: https://commits.webkit.org/52428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61418 268f45cc-cd09-0410-ab3c-d52691b4dbfc